--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   get_it: ^7.2.0
   injectable: ^1.5.3
   json_annotation: ^4.4.0
+  dio: ^4.0.4
 
 dev_dependencies:
   flutter_test:
