--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   injectable: ^1.5.3
   json_annotation: ^4.4.0
   dio: ^4.0.4
+  equatable: ^2.0.3
 
 dev_dependencies:
   flutter_test:
