--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dev_dependencies:
   build_runner: ^2.1.8
   injectable_generator: ^1.5.3
   auto_route_generator: ^3.2.3
+  mocktail: ^0.0.1-dev.12
+  random_string: ^2.3.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
